force-app/main/default/objects/SHT_Dave_Master_History__c/SHT_Dave_Master_History__c.object-meta.xml
<CustomObject>
    <label>Total Exposure Histories</label>
    <nameField>
        <displayFormat>SHTDMHIST-{0000}</displayFormat>
        <label>SHT Dave Master History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Total Exposure Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>