force-app/main/default/objects/SHT_Dave_Master_History__c/fields/Final_Exposure_Factor__c.field-meta.xml
<CustomField>
    <fullName>Final_Exposure_Factor__c</fullName>
    <formula>Total_Exposure_Factors__c + Hedged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Exposure Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>