force-app/main/default/objects/SHT_Dave_Master_History__c/fields/SHT_Dave_Master__c.field-meta.xml
<CustomField>
    <fullName>SHT_Dave_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SHT Dave Master</label>
    <referenceTo>SHT_Dave_Master__c</referenceTo>
    <relationshipName>SHT_Dave_Master_History</relationshipName>
    <type>Lookup</type>
</CustomField>