force-app/main/default/objects/SHT_Dave_Master_History__c/fields/Total_Exposure_Factor__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure_Factor__c</fullName>
    <label>Total Exposure Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>