force-app/main/default/objects/SHT_Dave_Master_History__c/fields/Total_Exposure_Factor_CBM__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure_Factor_CBM__c</fullName>
    <formula>IF(Name==&quot;GASOIL&quot;, Total_Exposure_Factor_MT__c / 0.8450, 
if(Name==&quot;MOGAS&quot;,Total_Exposure_Factor_MT__c / 0.7550,IF(Name==&quot;AGO B7&quot;, Total_Exposure_Factor_MT__c / 0.8450,IF(Name==&quot;IGO 50ppm&quot;, Total_Exposure_Factor_MT__c / 0.8450,0)) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Exposure Factor(CBM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>