force-app/main/default/objects/SHT_Dave_Master_History__c/fields/Total_Hedging__c.field-meta.xml
<CustomField>
    <fullName>Total_Hedging__c</fullName>
    <label>Hedged</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>