force-app/main/default/objects/SHT_Dave_Master_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SHT_Dave_Master__c</columns>
    <columns>Total_Exposure_Factor_CBM__c</columns>
    <columns>Total_Exposure_Factor_MT__c</columns>
    <columns>Total_Exposure_Factors__c</columns>
    <columns>Final_Exposure_Factor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>